--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <img src="assets/images/logoLOTR.png" alt="Logo">
+    <img src="assets/images/logo.png" alt="Logo">
     <nav>
         <ul>
             <li><a href="./index" class="">Home</a></li>
