--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -20,6 +20,44 @@ body {
     justify-content: space-between;
 }
 
+
+/* LANDING PAGE */
+
+.landing-choices input {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+}
+
+#landing-container {
+    height: 100vh;
+    text-align: center;
+    position: relative;
+    background-image: url(../assets/images/rainbow.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
+ 
+ #landing-container h1 {
+     font-size: 2rem;
+     margin-top: 50px;
+ }
+ 
+ .landing-choices {
+     position: absolute;
+     left: calc(50% - (500px / 2));
+     top: calc(50% - (500px / 2));
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     gap: 1rem;
+     width: 500px;
+     margin: 0 auto;
+     justify-content: center;
+     margin-top: 0.6rem;
+ }
+
+/* GLOBAL */
 body {
     display: grid;
     grid-template-rows: min-content;
@@ -34,20 +72,31 @@ header {
     background-color: gray;
     grid-area: header;
     margin-bottom: auto;
+    background-image: url(../assets/images/header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 60px;
+    column-gap: 0.5rem;
 }
+
 
 header img {
     margin-left: 0.4rem;
-    height: 100px;
+    height: 50px;
+    padding: 5px 0;
 }
 
 header nav ul {
     display: flex;
-    line-height: 100px;
+
 }
 
 header nav ul li {
     padding: 0 0.3rem;
+}
+
+header nav ul li a {
+    color:#f59300a3;
 }
 
 main {
@@ -57,7 +106,7 @@ main {
 
 footer {
     margin-top: auto;
-    padding-top: 20px;
+    padding-top: 10px;
     grid-area: footer;
     text-align: center;
     background-color: gray;
@@ -65,7 +114,12 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;    
+    color:#f59300a3;
+    background-image: url(../assets/images/header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
 }
 
 /*QUIZ*/
@@ -77,7 +131,7 @@ footer {
 
 #quiz-box {
     position: relative;
-    background-color: rgb(255, 228, 196);
+    background-color: #ffe4c4;
     border: 5px solid black;
     width: 600px;
 
@@ -108,7 +162,7 @@ footer {
     margin-left: 1.4rem;
 }
 
-#quiz-head button {
+#quiz-head input {
     margin-right: 1.4rem;
 }
 
@@ -212,47 +266,25 @@ footer {
     margin-left: 1.4rem;
 }
 
-#quiz-footer button {
+#quiz-footer input {
     margin-left: 1.4rem;
     margin-right: 1.4rem;
 }
 
-#landing-container {
-   height: 100vh;
-   text-align: center;
-   position: relative;
-   background-image: url(../assets/images/rainbow.png);
-   background-repeat: no-repeat;
-   background-size: cover;
+/* QUIZ BUTTONS */
+#prevSub {
+    transform: rotate(180deg)
 }
 
-#landing-container h1 {
-    font-size: 2rem;
-    margin-top: 50px;
+#nextSub {
+
 }
 
-.landing-choices {
-    position: absolute;
-    left: calc(50% - (500px / 2));
-    top: calc(50% - (500px / 2));
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1rem;
-    width: 500px;
-    margin: 0 auto;
-    justify-content: center;
-    margin-top: 0.6rem;
+#test {
+
 }
 
-.landing-choices input {
-    border-radius: 50%;
-    height: 150px;
-    width: 150px;
-}
-
-#blacklist_container {}
-
+/* 404 ERROR PAGE */
 #error404_container {
     height: 100vh;
 }
