--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <main>
-    <h2>Welcome</h2>
-    <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.</p>
-    <p>Deze quiz is gemaakt door de Gremlins. Wij zijn een groep studenten van AP Hoge School in Antwerpen.</p>
-    <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze quotes moeten gelinked worden aan het juiste karakter en aan de juiste film.</p>
-    <p>Start de quiz: <br><a href="./quiz"><input type="image" src="assets/images/so it begins.png" style="border: double;" height="100" width="200"/></a></p>
+    <img src="https://static.wikia.nocookie.net/lotr/images/3/3a/The_Lord_of_the_Rings_Characters.jpg/revision/latest/scale-to-width-down/670?cb=20150328111911" alt="lotr">
+    <quote>One ring to rule them all. One by one, the free lands of Middle-Earth fell to the power of the Ring, but there were some who resisted. A last alliance of men and elves marched against the armies of Mordor, and on the very slopes of Mount Doom, they fought for the freedom of Middle-Earth.</quote>
+    <p>Deze website is gemaakt door de Gremlins. Wij zijn een groep studenten aan de AP hogeschool in Antwerpen.</p>
+    <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze quotes moeten gelinked worden aan het juiste karakter en aan de juiste film. Op het einde krijg je je score te zien. Je kan ook je favoriete en minder geliefde quotes aanduiden. Wordt je al nieuwsgierig?</p>
+    <p>Start de quiz!<br><a href="./quiz"><input type="image" src="assets/images/so it begins.png"></a></p>
 </main>
