--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,20 @@
 <header>
-    <img src="assets/images/logo.png" alt="Logo">
-    <nav>
-        <ul>
-            <li><a href="./index" class="">Home</a></li>
-            <li><a href="./quiz" class="">Quiz</a></li>
-            <li><a href="./favorites" class="">Favorites</a></li>
-            <li><a href="./blacklist" class="">Blacklist</a></li>
+    <div>
+        <img src="assets/images/logo.png" alt="Logo">
+        <nav>
             <ul>
-    </nav>
+                <li><a href="./index" class="">Home</a></li>
+                <li><a href="./quiz" class="">Quiz</a></li>
+                <li><a href="./favorites" class="">Favorites</a></li>
+                <li><a href="./blacklist" class="">Blacklist</a></li>
+                <ul>
+        </nav>
+    </div>
+    <div class="account">
+        <img src="../../assets/icon/account.svg" alt="sessiondata" id="sessiondata" title="Session Data">
+    </div>
+    <div class="account-dropdown">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username">
+    </div>
 </header>
