--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <script src="/js/jquery-3.6.0.js"></script>
+    <script src="/js/global.js" defer></script>
     <%- include('../partials/header.ejs') -%>
     <%- body -%>
     <%- include('../partials/footer.ejs') -%>
