--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <main>
-    <img src="assets/images/LOTR.png" alt="lotr">
+    <!--  <img src="assets/images/LOTR.png" alt="lotr"> -->
     <quote>One ring to rule them all. One by one, the free lands of Middle-Earth fell to the power of the Ring, but there were some who resisted. A last alliance of men and elves marched against the armies of Mordor, and on the very slopes of Mount Doom, they fought for the freedom of Middle-Earth.</quote>
     <p>Deze website is gemaakt door de Gremlins. Wij zijn een groep studenten aan de AP hogeschool in Antwerpen.</p>
     <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze quotes moeten gelinked worden aan het juiste karakter en aan de juiste film. Op het einde krijg je je score te zien. Je kan ook je favoriete en minder geliefde quotes aanduiden. Wordt je al nieuwsgierig?</p>
