--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,5 +2,8 @@
 
 <main id="quiz-page">
     <div id="quiz-box">
+        <noscript>
+            <p>You need Javascript enabled for this quiz to work</p>
+        </noscript>
     </div>
 </main>
