changed max height scoreboard box

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -297,7 +297,7 @@ footer {
 
 #score-table-space {
     grid-area: "quiz-main";
-    max-height: fit-content;
+    max-height: 760px;
 }
 
 #score-table {
