--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -22,6 +22,7 @@ h1 {
 /* #endregion */
 
 /* #region Landing Page */
+
 #landing-page {
 
     margin-top: calc(50% / 2);
@@ -51,4 +52,10 @@ h1 {
         }
     }
 }
+/* #endregion */
+
+/* #region Home Page */
+
+
+
 /* #endregion */
