--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("./font.css");
 :root {
   --c-main-background: black;
   --c-main-title: #9F7510;
@@ -5,6 +6,10 @@
 }
 
 /* #region Main Style */
+body, html {
+  height: 100%;
+}
+
 body {
   background-color: var(--c-main-background);
 }
@@ -21,8 +26,48 @@ h1 {
 
 /* #endregion */
 /* #region Landing Page */
+.landing-overlay {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.392);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+}
+
+.landing-overlay .landing-overlay__popup {
+  position: absolute;
+  width: 330px;
+  height: 230px;
+  left: calc(50% - (330px / 2));
+  top: calc(50% - (230px / 2));
+  background-color: #9F7510;
+  background-color: white;
+}
+
+.landing-overlay .landing-overlay__popup .landing-overlay__popup__content {
+  height: 200px;
+  margin-top: calc(50% - (200px / 2));
+}
+
+.landing-overlay .landing-overlay__popup .landing-overlay__popup__content p {
+  text-align: center;
+  font-size: 2.1rem;
+  margin-bottom: 2.5rem;
+  color: #707070;
+}
+
+.landing-overlay .landing-overlay__popup .landing-overlay__popup__content button {
+  display: block;
+  margin: 0 auto;
+  padding: 0.6rem 3rem;
+  border-radius: 5px;
+  border: solid thin var(--c-main-title);
+  background-color: var(--c-main-title);
+  font-size: 1.4rem;
+}
+
 #landing-page {
-  margin-top: calc(50% / 2);
+  padding-top: calc(50% / 2);
 }
 
 #landing-page h1 {
@@ -59,6 +104,6 @@ h1 {
 }
 
 /* #endregion */
-/* #region Home Page */
+/* #region Home page */
 /* #endregion */
 /*# sourceMappingURL=main.css.map */
