--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,25 @@
 <header>
-    <div>
         <img src="assets/images/logo.png" alt="Logo">
-        <nav>
+        <nav class="big_navigation">
             <ul>
                 <li><a href="./index" class="">Home</a></li>
                 <li><a href="./quiz" class="">Quiz</a></li>
                 <li><a href="./favorites" class="">Favorites</a></li>
                 <li><a href="./blacklist" class="">Blacklist</a></li>
-                <ul>
+            <ul>
         </nav>
-    </div>
-    <div class="account">
-        <img src="../../assets/icon/account.svg" alt="sessiondata" id="sessiondata" title="Session Data">
+
+        <div class="phone_menu_button">
+            <img src="assets/icon/menu-phone.svg" alt="Menu">
+            <ul class="phone_menu_navigation">
+                <li><a href="./index" class="">Home</a></li>
+                <li><a href="./quiz" class="">Quiz</a></li>
+                <li><a href="./favorites" class="">Favorites</a></li>
+                <li><a href="./blacklist" class="">Blacklist</a></li>
+                <li><a href="./login" class="">Login</a></li>
+                <li>ELwyn</li>
+                <li><a href="./user-settings" class="">User Settings</a></li>
+                <li><a href="./logout" class="">Logout</a></li>
+            <ul>
     </div>
 </header>
