--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -27,6 +27,42 @@ h1 {
 
 /* #endregion */
 
+/* #region Header */
+
+header {
+    height: 60px;
+    line-height: 60px;
+    display: flex;
+    justify-content: space-between;
+
+    img {
+        width: 45%;
+        padding: 0.5rem 0 0.5rem 0.5rem;
+    }
+
+    .big_navigation {
+        display: none;
+    }
+
+    .phone_menu_button {
+
+        img {
+            display: block;
+            width: 25px;
+            height: 25px;
+            
+            margin-top: calc(50% - (25px / 1.5));
+            margin-right: 1rem;
+        }
+
+        .phone_menu_navigation {
+            display: none;
+        }
+    }
+}
+
+/* #endregion */
+
 /* #region Landing Page */
 
 .landing-overlay {
